@@ -8,12 +8,34 @@
 //  this also disables the BOTH-CLICK action in Win7 for displaying the context menu; we do
 //  nothing about it.
 
+//Note: [Why we don't delete file after app]
+//  http://www.stackoverflow.com/questions/19734258/
+//  how-do-i-wait-to-delete-a-file-until-after-the-program-i-started-has-finished-us
+//When copying a file to sandbox and opening it, we don't wait for the started app to finish
+//  and then delete the file. The reason is that this is difficult to do cross-platform and even
+//  on Windows we can't always understand when the application is really closed or whether it has
+//  spawned another app.
+//  As a CONSEQUENCE, we can't show the 'File X was modified. Apply the modifications in FileArchive
+//  too?' messages which may make the program more usable.
+//So we delete the files later:
+//- Deleting on closing BookmarkManager: Maybe best option, but user may lose modified sanboxed
+//  files so we don't do it.
+//- Deleting 30 seconds after startup: Maybe, but user may have again opened a file; that new file
+//  gets deleted too.
+//- Deleting on start-up: Slows down startup... but not too much! So we do it.
+//Other methods such as renaming the sandbox folder on start-up and remove it 30 seconds later, or
+//  keep the list of newly opened files and don't delete them in the 30 seconds later clean up is
+//  also possible; but we don't do it for now.
+
 /// TODO: Plan:
 ///   x File Manager
 ///   x Make the changes that we need to require multiple file attaching and do it.
 ///   x Manage tag saving as comma separated integers/string or a separate table? (Done: the latter)
-///   - Changes to Edit/Add UI for editing tags with mouse only
 ///   - Show files information on double click in BOTH add/edit and view bookmark dialogs.
+///   - When user opens a file, CAN HE CHANGE IT? And should we save Changes? YES AND ALSO CHANGES
+///     MUST BE SAVED IN THE DB TOO! Also, user should be warned against "changing changes multiple
+///     files too". Add this last one as a note when you implemented file changing before multiple
+///     file sharing.
 ///   x Save the selection/scroll position on add/edit/delete.
 ///   - View bookmark dialog
 ///   - In MainWindow, sort BMs by their adding date.
@@ -30,10 +52,7 @@
 ///     dialog for the global programs that are used for every extension.
 ///
 /// LATER:
-///   - When user opens a file, CAN HE CHANGE IT? And should we save Changes? YES AND ALSO CHANGES
-///     MUST BE SAVED IN THE DB TOO! Also, user should be warned against "changing changes multiple
-///     files too". Add this last one as a note when you implemented file changing before multiple
-///     file sharing.
+///   - Changes to Edit/Add UI for editing tags with mouse only
 ///   - Make the add/edit dialog non-modal, and allow editing/viewing more than one bookmark at once
 ///     (but do NOT allow opening the edit/view dialog for the same bookmark twice!)
 ///   - Full-text index for the words inside the saved web pages!
