@@ -24,3 +24,4 @@
 2014-09-08  19  Fixed BMViewDlg bugs, initial implementation of FileViewHandler's/FileViewerWidget
                 to preview an HTML file.
 2014-09-10  19  Created simple Image and Text preview handlers, BMViewDlg files context menu.
+2014-09-11  19  Preview enhancements. Support sandboxed file opening everywhere.
